@@ -1,0 +1,49 @@
+# Remove kdepim-runtime translations
+accountwizard_ical.mo
+accountwizard_imap.mo
+accountwizard_kolab.mo
+accountwizard_mailbox.mo
+accountwizard_maildir.mo
+accountwizard.mo
+accountwizard_pop3.mo
+akonadi_birthdays_resource.mo
+akonadi_contacts_resource.mo
+akonadi_davgroupware_resource.mo
+akonadi-filestore.mo
+akonadi_ical_resource.mo
+akonadi_imap_resource.mo
+akonadi_invitations_agent.mo
+akonadi_kabc_resource.mo
+akonadi_kcal_resource.mo
+akonadi_kdeaccounts_resource.mo
+akonadi_knut_resource.mo
+akonadi_kolabproxy_resource.mo
+akonadi_kresourceassistant.mo
+akonadi_localbookmarks_resource.mo
+akonadi_maildir_resource.mo
+akonadi_maildispatcher_agent.mo
+akonadi_mbox_resource.mo
+akonadi_microblog_resource.mo
+akonadi_mixedmaildir_resource.mo
+akonadi_nepomukfeeder.mo
+akonadi_nepomuktag_resource.mo
+akonadi_nntp_resource.mo
+akonadi_openxchange_resource.mo
+akonadi_pop3_resource.mo
+akonadi_serializer_plugins.mo
+akonadi_singlefile_resource.mo
+akonadi_strigi_feeder.mo
+akonaditray.mo
+akonadi_vcarddir_resource.mo
+akonadi_vcard_resource.mo
+kabc_akonadi.mo
+kaddressbookmigrator.mo
+kcal_akonadi.mo
+kcm_akonadi.mo
+kdepim-runtime-qml.mo
+kio_akonadi.mo
+kjotsmigrator.mo
+kmail-migrator.mo
+kres-migrator.mo
+kresources_shared_akonadi.mo
+newmailnotifieragent.mo
