@@ -2,6 +2,9 @@ kde-l10n (4:4.6.4-0r1) UNRELEASED; urgency=low
 
   * New upstream release.
 
+  [ Modestas Vainius ]
+  * Remove kdepim-runtime translations from kde-l10n packages.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 11 Jun 2011 16:16:43 +0300
 
 kde-l10n (4:4.6.3-1) unstable; urgency=low
